# ML-assignment

./: .gitignore  README.md  main.py  pyproject.toml  visualize.py
data/: build_metadata.py  prepare_dataset.py
eval/: evaluate.py  llm_judge_prompt.md  llm_judge_results.md  queries.json
indexer/: build_index.py  color_extractor.py  embedding_extractor.py  region_extractor.py  vector_store.py
output/: result.json
retriever/: constraint_reranker.py  query_parser.py  retriever.py
